---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type k : int for : 1 .. 2 by k end for"
---
"k"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:29..30: cannot use `k` as an expression
| error for src/main.t:29..30: `k` is a reference to a type, not a variable
| note for src/main.t:5..6: `k` declared here
